--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ author: "Márcio Martins"
 date: "26 Jan 2018"
 output:
   github_document:
-    dev: "jpeg"
+    dev: "png"
 always_allow_html: yes
 editor_options: 
   chunk_output_type: console
@@ -20,6 +20,7 @@ library(lubridate)
 library(rgdal)
 library(ggmap)
 library(plotly)
+library(zoo)
 ```
 
 ##Caulerpa prolifera sampling transects
@@ -37,7 +38,7 @@ To determine the spatial distribution of *Caulerpa prolifera*, divers swam trans
 ###Isolating transects
 
 Let's start by importing the tracks. File format is ".gpx". For conveniency, I will convert this information into a matrix-like format. There are 4 also tracks on record. We are only interested in the last one.  
-```{r track, echo = TRUE}
+```{r track}
 track <- readOGR("./GPS_tracks.gpx", layer = "track_points")
 
 points <- tibble("trackID" = track@data$track_fid,   #Select variables we are interested in
@@ -74,7 +75,8 @@ ggmap(map) +
 ```
 
 Using this information, we need to extract the starting and ending points of each transect. Visually, I can easily find all of the tracks. Since this is possible, I will create an interactive map to allow me to extract the ID number of these points.  
->Due to limitations in github .md files, this does not work on the github page.  
+
+> Due to limitations in github .md files, this does not work on the github page.  
 
 ```{r interactive_track, include = FALSE}
 #Let's select every other 10th point for plotting to ease the size of the map
@@ -135,22 +137,23 @@ kable(transects %>%
 kable_styling(full_width = F)
 ```
 
-##Sampling points
+##Sampling points  
 
-Now that we have the transects, let's see how accurate an automated methodology to determine sampling points would be. With one point per second, we have a pretty high resolution track for the transects. An interesting method might be to estimate diver's speeds along the transects to find stopping points.
+Now that we have the transects, let's see how accurate an automated methodology to determine sampling points would be. With one point per second, we have a pretty high resolution track for the transects. An interesting method might be to estimate diver's speeds along the transects to find stopping points.  
 
 To do so, we will:  
 * Calculate the total distance travelled from start of transect until current point  
 * Calculate travel speed at each point  
 
-We can the distance  between any two points as:
-$$Distance~from~X1~to~X2 = \sqrt{(X_2 - X_1)^2 + (Y_2 - Y_1)^2}$$
+We can the distance  between any two points p1 and p2:  
+Distance <sub>p1 to p2</sub> = Square root ((X<sub>2</sub> - X<sub>1</sub>) + (Y<sub>2</sub> - Y<sub>1</sub>))
 
-The full distance travelled from the start of the transect to any given time is then simply the cumulative sum of distances of all previous points. To this we will call $\Delta Distance_{time}$
+The full distance travelled from the start of the transect to any given time is then simply the cumulative sum of distances of all previous points. To this we will call &#916 Distance.  
 
-With information of distance traveled and time, we can estimate their speed. The current speed at any given point will be calculated as the speed over the previous 10 seconds:
-$$Speed_{time} = \Delta Distance_{time} - \Delta Distance_{time - 10}$$
-Because we're only interested in how fast they are going relative to other points in the transect, I will leave distance units as degrees and will calculate speed as degrees per second.
+We can now estimate their speed. The current speed at any given point will be calculated as the speed over the previous 10 seconds:  
+Speed<sub>time</sub> = &#916 Distance<sub>time</sub> - &#916 Distance<sub>time - 10</sub>  
+
+Because we're only interested in how fast they are going relative to other points in the transect, I will leave distance units as degrees and will calculate speed as degrees per second.  
 ```{r speed}
 transects <- transects %>% 
              group_by(transect) %>%
@@ -169,13 +172,11 @@ transects <- transects %>%
 ggplot(transects) +
   geom_line(aes(x = distance, y = speed)) +
   facet_wrap(~ transect, scales = "free") +
-  labs(x = "Distance along the transect (degrees)", y = "Speed (degrees/s)") +
+  labs(x = "Distance along the transect (degrees)", y = "Speed (degrees/second)") +
   theme_bw()
 ```
 
-This looks interesting. I suspect it's not enough to identify all stops due to stops without coverage where the stop time was too short. Also, uncertainty in the start and end of transects makes it hard to be sure of stops at the limits. 
-
-Still, it might be interesting to plot the transects, with color based on speed. Because average speed was different amongst transects, let's increase contrast of the colors. To do so, I will standardize the speed within each individual transect (subtract mean and divide by sd). We lose information about speed differences amongst transects but keep information about the parts of a transect that were slow, compared to the rest of the transect. 
+This looks interesting. This visualization shows too much variation. Smoothing (running average) the plots might make points where the divers stop easier. Another alternative is simply to plot the transects, with color based on speed. Because average speed was different amongst transects, let's increase contrast of the colors. To do so, I will standardize the speed within each individual transect (subtract mean and divide by sd). We lose information about speed differences amongst transects but keep information about the parts of a transect that were slow, compared to the rest of the same transect. 
 
 ```{r scaled_speed}
 transects <- transects %>%
@@ -223,24 +224,77 @@ ggplot() +
 We're getting somewhere now.
 
 ##Plot points obtained by checking the camera
-By checking the camera footage, sampling times were determined. Times were then cross-referenced with GPS data to get the sampling point coordinates.  
-  
-Let's plot them vs the points we obtained by speed.
-```{r points_plot}
-sampling_points <- read_csv2("./sampling_points.csv") %>%
-                   rename(transect = Transect)
+All of the sampling points were manually determined using video footage of the dive and cross referencing the times at which samples were taken with with time of the GPS footage.  To see how effective our sampling point location is we can now plot automatic and manually determined points and see how close they are.
 
+
+```{r points_plot}
+#Function that identifies when the divers are stopped and gives those points an ID number
+identify_points <- function(vector,interval){
+  interval <- interval - 1
+  point_id <- 1                       #initialize a number to identify sampling points
+  ids <- vector(mode = "numeric")     #Vector to store point ids
+  for(i in 1:length(vector)){
+    #If 10 points in a row are considered slow, return TRUE (divers are stoped)
+    stopped <- all(c(vector[i:i+interval]) == "slow")
+    
+    ids <- ids %>%          #If diver is stoped, give point an ID, else NA
+           c(ifelse(stopped,
+           point_id,
+           NA))
+    
+    point_id <- ifelse(stopped, point_id, point_id + 1) #If divers are moving again, increase point ID counter. This does not identify the points in numeric order, but that is not necessary
+  }
+  return(ids)
+}
+
+transects_smooth <- transects %>%         #To plot smooth transects I will average every 10 points and plot a path
+                    select(lat, long, nr, transect, extremety) %>%
+                    group_by(transect) %>%
+                    mutate(long = rollmean(long, 10, fill = NA),
+                           lat  = rollmean(lat, 10, fill = NA)) %>%
+                    filter(!is.na(lat)) %>%
+                    .[seq(1, nrow(.), 10),]  %>% #Select every 10th point
+                    ungroup()
+
+sampling_points <- read_csv2("./sampling_points.csv") %>%  #Import the manually determined points
+                   rename(transect = Transect, long = Long, lat = Lat) %>%
+                   mutate(name = "sampling point")
+
+estimated_points <- transects %>%
+                    mutate(sample_points = identify_points(quant40_speed, 15)) %>%
+                    filter(!is.na(sample_points)) %>%
+                    group_by(transect, sample_points) %>%
+                    summarise(lat = mean(lat), long = mean(long)) %>%
+                    mutate(name = "estimated point") %>%
+                    ungroup()
+
+plot_points <- transects %>% ungroup %>%
+               filter(extremety %in% c("start","end")) %>%
+               select(transect, long, lat, name = extremety) 
+
+plot_points <- plot_points %>%
+               rbind(sampling_points %>% select(transect, long, lat, name))
+
+plot_points <- plot_points %>%
+               rbind(estimated_points %>% select(transect, long, lat, name))
 
 ggplot() +
-  geom_path(data = transects, aes(x = long, y = lat, color = quant40_speed, group = transect), size = 2) +
-  scale_color_manual(values = c("#ff0008","#0061ff")) +
-  geom_point(data = transects %>% filter(extremety %in% c("start","end")),
-             aes(x = long, y = lat, fill = extremety),
-             size = 2,
-             shape = 21) +
-  geom_point(data = sampling_points, aes(x = Long, y = Lat), shape = 1, size = 3) +
+  geom_path(data = transects_smooth, aes(x = long, y = lat, group = transect), size = 1) +
+  geom_point(data = plot_points, aes( x = long, y = lat, color = name, size = name)) +
   facet_wrap(~ transect, scales = "free") +
-  scale_fill_manual(values = c("start" = "#33a02c", "end" = "#ff7f00")) + 
+  scale_color_manual(values = c("start" = "#33a02c", "end" = "#ff7f00", "sampling point" = "red", "estimated point" = "blue")) + 
+  scale_size_manual(values = c("start" = 3, "end" = 3, "sampling point" = 2, "estimated point" = 1), guide = FALSE) +
   labs(x = "Longitude", y = "Latitude", color = "Speed", fill = "") +
   theme_bw()
 ```
+
+This methodology seems to be usefull to approximate sampling locations without manually going through video footage. One pattern is also very obvious: it was much more accurate in the last 2 transects than the first ones.  There are also some points that were not detected at all. Here is the list of reasons I believe is causing the largest flaws in the method:  
+* One of the divers was using a scuba scooter for the first time. I believe this is why there are some random stops in transect 1  
+* In areas where there was no caulerpa, the divers simply kept going, meaning there is no stop  
+* Part of transect one was not even recorded in the GPS data (memory was full and it was overwritten)  
+
+Much of this can be fixed:  
+* Change GPS to record points every 5 seconds, rather than 1 increases the time we can record 5-fold (and carry an extra GPS just in case)  
+* Ensure divers ALWAYS stop a minimum of 30 seconds, even if there is no Caulerpa in the area  
+* Record transect start and end time, so that transects can be extracted easily
+* Extract number of estimated sampling points and see if they match real number of samples as a checking method
