--- a/README.Rmd
+++ b/README.Rmd
@@ -21,23 +21,25 @@ library(rgdal)
 library(ggmap)
 library(plotly)
 library(zoo)
+
+points_palette <- c("start" = "#4daf4a", "end" = "#984ea3", "sampling point" = "#e41a1c", "estimated point" = "#377eb8")
 ```
 
-##Caulerpa prolifera sampling transects
+## Caulerpa prolifera sampling transects
 To determine the spatial distribution of *Caulerpa prolifera*, divers swam transects across a canal in the Ria Formosa lagoon (South Portugal) and stopped at pre-determined intervals to collect samples.
 
-* The track of the divers was recorded by GPS, which was on a buoy attached to divers
-* GPS track is continuous between transects, including boat travel
-* There are a total of 4 transects
-* Sampling points were also determined by having a user look at footage of the dives, mark the times at which samples were taken and them crossing them with the GPS data. These points were then used to confirm if this automatic method is accurate
+- The track of the divers was recorded by GPS, which was on a buoy attached to divers
+- GPS track is continuous between transects, including boat travel
+- There are a total of 4 transects
+- Sampling points were also determined by having a user look at footage of the dives, mark the times at which samples were taken and them crossing them with the GPS data. These points were then used to confirm if this automatic method is accurate
 
 **GOALS:**  
-1. To determine start and end point of each transect, isolate and extract them  
-2. Using the extracted transects, attempt to determine sampling points
+1. To determine start and end point of each transect, isolate and extract them.  
+2. Determine sampling points along the transect.  
 
-###Isolating transects
+### Isolating transects
 
-Let's start by importing the tracks. File format is ".gpx". For conveniency, I will convert this information into a matrix-like format. There are 4 also tracks on record. We are only interested in the last one.  
+Let's start by importing the tracks. File format is ".gpx". For conveniency, I will convert this information into a tabular format. There are 4 also tracks on record. We are only interested in the last one.  
 ```{r track}
 track <- readOGR("./GPS_tracks.gpx", layer = "track_points")
 
@@ -55,7 +57,7 @@ points$time <- as.character(points$time) %>%
 head(points)
 ```
 
-Now the information is in a tibble (basically a data.frame, or a matrix). This format is very easy to manipulate, as well as plot using ggplot2.
+Now the information is in a tibble (a "modern take on data frames"). This format is very easy to manipulate, as well as plot using ggplot2.
 
 Let's start by getting a glimpse of the full track:
 
@@ -93,12 +95,12 @@ ggplotly(
 ```
 
 Using this interactive map we can approximate the first and last points of each trasect and obtain their ID:  
-* Transect one:   Points 1 to 581  
-* Transect two:   Points 2401 to 3811  
-* Transect three: Points 5311 to 6601  
-* Transect four : Points 8311 to 9571  
+- Transect one:   Points 1 to 581  
+- Transect two:   Points 2401 to 3811  
+- Transect three: Points 5311 to 6601  
+- Transect four : Points 8311 to 9571  
   
-We can now extract the transects.
+We can now extract the transects.  
 ```{r transects}
 t1 <- points %>%
       filter(nr <= 581)
@@ -126,6 +128,7 @@ ggmap(map) +
   labs(x = "Longitude", y = "Latitude") +
   theme(legend.position = "none")
 ```
+
 The resulting transects seem accurate. However, results should be confirmed by checking starting and ending times for transects in the videos. To make this task easier, let's make a table with start/end times for the transects obtained here.
 
 ```{r time_table}
@@ -138,23 +141,21 @@ kable_styling(full_width = F)
 
 ```
 
-
-##Sampling points
-
+### Sampling points
 Now that we have the transects, let's see how accurate an automated methodology to determine sampling points would be. With one point per second, we have a pretty high resolution track for the transects. An interesting method might be to estimate diver's speeds along the transects to find stopping points.  
 
 To do so, we will:  
 
-* Calculate the total distance travelled from start of transect until current point  
-* Calculate travel speed at each point  
+- Calculate the total distance travelled from start of transect until current point  
+- Calculate travel speed at each point  
 
 The distance  between any two points p1 and p2 is given by:
-Distance <sub>p1 to p2</sub> = Square root ((X<sub>2</sub> - X<sub>1</sub>) + (Y<sub>2</sub> - Y<sub>1</sub>))
+Distance <sub>p1 to p2</sub> = Square root ((X<sub>2</sub> - X<sub>1</sub>)<sup>2</sup> + (Y<sub>2</sub> - Y<sub>1</sub>)<sup>2</sup>)
 
 The full distance travelled from the start of the transect to any given point is then simply the cumulative sum of distance. To this we will call Delta Distance.  
 
 The diver speed at any given point can be calculated as the speed over the previous 10 seconds:  
-Speed<sub>at time</sub> = Delta Distance<sub>time</sub> - Delta Distance<sub>time - 10</sub>  
+Speed<sub>at time</sub> = (Delta Distance<sub>time - 10</sub> - Delta Distance<sub>time</sub>)/10  
 
 
 Because we're only interested in how fast they are going relative to other points in the transect, we will leave distance units as degrees and will calculate speed as degrees per second.  
@@ -200,7 +201,7 @@ ggplot() +
              aes(x = long, y = lat, fill = extremety),
              size = 3,
              shape = 21) +
-  scale_fill_manual(values = c("start" = "#33a02c", "end" = "#ff7f00")) + 
+  scale_fill_manual(values = points_palette) + 
   facet_wrap(~ transect, scales = "free")+
   labs(x = "Longitude", y = "Latitude", color = "Scaled speed", fill = "") +
   theme_bw()
@@ -221,15 +222,14 @@ ggplot() +
              aes(x = long, y = lat, fill = extremety),
              size = 3,
              shape = 21) +
-  scale_fill_manual(values = c("start" = "#33a02c", "end" = "#ff7f00")) + 
+  scale_fill_manual(values = points_palette) + 
   labs(x = "Longitude", y = "Latitude", color = "Speed", fill = "") +
   theme_bw()
 ```
 
 We're getting somewhere now.  
 
-##Estimated vs real sampling points  
-
+### Estimated vs real sampling points
 All of the sampling points were manually determined using video footage of the dive and cross referencing the times at which samples were taken with with time of the GPS footage.  To see how effective our sampling point location is we can now plot automatic and manually determined points and see how close they are.
 
 
@@ -238,7 +238,7 @@ All of the sampling points were manually determined using video footage of the d
 identify_points <- function(vector,interval){
   interval <- interval - 1
   point_id <- 1                       #initialize a number to identify sampling points
-  ids <- vector(mode = "numeric")     #Vector to store point ids
+  ids <- vector(mode = "numeric")     #Vector to stopre sampling points id number
   for(i in 1:length(vector)){
     #If 10 points in a row are considered slow, return TRUE (divers are stoped)
     stopped <- all(c(vector[i:i+interval]) == "slow")
@@ -248,7 +248,7 @@ identify_points <- function(vector,interval){
            point_id,
            NA))
     
-    point_id <- ifelse(stopped, point_id, point_id + 1) #If divers are moving again, increase point ID counter. This does not identify the points in numeric order, but that is not necessary
+    point_id <- ifelse(stopped, point_id, point_id + 1) #If divers are moving, increase point ID counter. This does not create a continuous ID (there are gaps), but that is not necessary
   }
   return(ids)
 }
@@ -256,10 +256,10 @@ identify_points <- function(vector,interval){
 transects_smooth <- transects %>%         #To plot smooth transects I will average every 10 points and plot a path
                     select(lat, long, nr, transect, extremety) %>%
                     group_by(transect) %>%
-                    mutate(long = rollmean(long, 10, fill = NA),
-                           lat  = rollmean(lat, 10, fill = NA)) %>%
+                    mutate(long = rollmean(long, 20, fill = NA, aling = "center"),
+                           lat  = rollmean(lat, 20, fill = NA), aling = "center") %>%
                     filter(!is.na(lat)) %>%
-                    .[seq(1, nrow(.), 10),]  %>% #Select every 10th point
+                    .[seq(1, nrow(.), 20),]  %>% #Select every 10th point
                     ungroup()
 
 sampling_points <- read_csv2("./sampling_points.csv") %>%  #Import the manually determined points
@@ -288,20 +288,21 @@ ggplot() +
   geom_path(data = transects_smooth, aes(x = long, y = lat, group = transect), size = 1) +
   geom_point(data = plot_points, aes( x = long, y = lat, color = name, size = name)) +
   facet_wrap(~ transect, scales = "free") +
-  scale_color_manual(values = c("start" = "#33a02c", "end" = "#ff7f00", "sampling point" = "red", "estimated point" = "blue")) + 
+  scale_color_manual(values = points_palette) + 
   scale_size_manual(values = c("start" = 3, "end" = 3, "sampling point" = 2, "estimated point" = 1), guide = FALSE) +
   labs(x = "Longitude", y = "Latitude", color = "Speed", fill = "") +
   theme_bw()
 ```
 
+
 This methodology seems to be usefull to approximate sampling locations without manually going through video footage. One pattern is also very obvious: it was much more accurate in the last 2 transects than the first ones.  There are also some points that were not detected at all. Here is the list of reasons I believe is causing the largest flaws in the method:  
 
-* One of the divers was using a scuba scooter for the first time. I believe this is why there are some random stops in transect 1  
-* In areas where there was no caulerpa, the divers simply kept going, meaning there is no stop  
-* Part of transect one was not even recorded in the GPS data (memory was full and it was overwritten)  
+- One of the divers was using a scuba scooter for the first time. I believe this is why there are some random stops in transect 1  
+- In areas where there was no caulerpa, the divers simply kept going, meaning there is no stop  
+- Part of transect one was not even recorded in the GPS data (memory was full and it was overwritten)  
 
-Much of this can be fixed:  
-* Change GPS to record points every 5 seconds, rather than 1 increases the time we can record 5-fold (and carry an extra GPS just in case)  
-* Ensure divers ALWAYS stop a minimum of 30 seconds, even if there is no Caulerpa in the area  
-* Record transect start and end time, so that transects can be extracted easily  
-* Extract number of estimated sampling points and see if they match real number of samples as a checking method
+*Much of this can be fixed:*  
+- Change GPS to record points every 5 seconds, rather than 1 increases the time we can record 5-fold (and carry an extra GPS just in case)  
+- Ensure divers ALWAYS stop a minimum of 30 seconds, even if there is no Caulerpa in the area  
+- Record transect start and end time, so that transects can be extracted easily  
+- Extract number of estimated sampling points and see if they match real number of samples as a checking method
